Mon Sep 01 21:42:31 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Eliminate brass_doclen_t in favour of just using
	  Xapian::termcount.

Mon Sep 01 21:28:39 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.h: Tweak to ease upcoming big merge.

Mon Sep 01 20:59:40 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/,backends/dbcheck.cc: Only create a btree entry for
	  the document data if it is non-empty.  The table is now lazily
	  created, so won't exist if no documents have document data set.

Mon Sep 01 16:54:44 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_record.cc,backends/brass/brass_record.h: Remove
	  BrassRecordTable::get_doccount() as it is no longer used.

Mon Sep 01 16:51:04 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Track doccount in the database stats.

Mon Sep 01 16:27:15 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Update comment and exception
	  message not to talk about "consistent state", as that was to do
	  with the base files.

Mon Sep 01 14:57:02 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Explicitly include brass_defs.h.

Mon Sep 01 14:48:01 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Eliminate backends/brass/brass_types.h.

Fri Aug 29 21:06:22 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Fix checking a single brass table.

Thu Aug 28 16:04:59 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.cc,backends/chert/chert_check.cc,
	  bin/xapian-check.cc,include/xapian/constants.h: Rename
	  DBCHECK_SHOW_BITMAP to DBCHECK_SHOW_FREELIST.

Tue Aug 26 22:31:32 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 22 09:09:52 GMT 2014  Gaurav Arora <gauravarora.daiict@gmail.com>

	* api/,backends/brass/,backends/chert/,
	  backends/contiguousalldocspostlist.cc,
	  backends/contiguousalldocspostlist.h,backends/database.h,