@@ -1,3 +1,8 @@
+Mon Sep 01 21:51:45 GMT 2014  Olly Betts <olly@survex.com>
+
+	* tests/harness/testrunner.h: Drop "flint" flag - flint was removed
+	  from trunk some time ago.
+
 Mon Sep 01 21:42:31 GMT 2014  Olly Betts <olly@survex.com>
 
 	* backends/brass/: Eliminate brass_doclen_t in favour of just using
